tests/neg/i5640.scala
object test {
  val foo = (()) => () // error: not a legal formal parameter
}